# filetype-visualizer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md
man/: .gitignore  CMakeLists.txt  ftvis.1
src/: CMakeLists.txt  main.cpp
src/cmdline/: config.hpp  options.cpp  options.hpp
src/data/: chargroup_transition_counter.cpp  chargroup_transition_counter.hpp  grid.cpp  grid.hpp  histogram.cpp  histogram.hpp  linear_normalizer.cpp  linear_normalizer.hpp  logarithmic_plus_one_normalizer.cpp  logarithmic_plus_one_normalizer.hpp  normalizer.hpp  standard_single_byte_transition_counter.cpp  standard_single_byte_transition_counter.hpp  transition_counter.hpp
src/except/: bad_mapping.hpp  illegal_size_exception.hpp  normalizer_exception.hpp  uninitialized.hpp  upscale_exception.hpp
src/io/: bmp_writer.cpp  bmp_writer.hpp  file_writer.hpp  filereader.cpp  filereader.hpp  png_writer.cpp  png_writer.hpp  ppm_writer.cpp  ppm_writer.hpp
src/tests/: CMakeLists.txt  README.md  test_filereader.cpp  test_grid.cpp  test_hist_text.cpp  test_histogram.cpp  test_image.cpp  test_image_builder.cpp  test_linear_normalizer.cpp  test_logarithmic_plus_one_normalizer.cpp  test_standard_colormap.cpp  test_standard_single_byte_transition_counter.cpp  tests.cpp
src/vis/: colormap.hpp  hist_text.cpp  hist_text.hpp  image.cpp  image.hpp  image_builder.cpp  image_builder.hpp  standard_colormap.cpp  standard_colormap.hpp
