SET(MAN_GZ ${CMAKE_INSTALL_DIR}/ftvis.1.gz)
SET(MAN_FILE ${CMAKE_SOURCE_DIR}/man/ftvis.1)

ADD_CUSTOM_COMMAND(OUTPUT ${MAN_GZ}
    DEPENDS ftvis.1
    COMMAND gzip -ckf ${MAN_FILE} > ${MAN_GZ})

ADD_CUSTOM_TARGET(manpage ALL
    DEPENDS ${MAN_GZ})

INSTALL(FILES ${MAN_GZ}
    DESTINATION man/man1
    CONFIGURATIONS Release
    PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
